Fix layout spacing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,5 @@
+@import "./_breakpoints.scss";
+
 :root {
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
@@ -31,4 +33,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+main {
+  padding-top: 56px;
+  @include breakpoint-md {
+    padding-top: 100px;
+  }
 }
